--- a/index.html
+++ b/index.html
@@ -107,5 +107,6 @@
         <button id='b3' type='button'>Crow</button>
     </div>
     <p id='output'></p>
+    <div>Cool, I made a change.</div>
 </body>
 </html>
